tests/misc_tests/syntax_failures_ui/syntax_failure_bitwise_and_ui-err.rs

fn main(){
    typewit_gce::gce_int_eq!(3 & 5, 3 & 5, i8);
}


